# polyhook-rs

./: Cargo.toml
polyhook2/: Cargo.toml
polyhook2-sys/: Cargo.toml  build.rs
polyhook2-sys/polyhook2/: wrapper.h
polyhook2-sys/polyhook2/lib/: PolyHook_2.lib  Zycore.lib  Zydis.lib  asmjit.lib  capstone.lib
polyhook2-sys/src/: bindings_bundled.rs  lib.rs
polyhook2/src/: lib.rs  main.rs
