[package]
name = "polyhook2-sys"
version = "1.0.0"
edition = "2021"
description = "PolyHook2 pre-compiled libs and FFI bindings."
license = "MIT"
links = "polyhook2"
build = "build.rs"

[lib]
crate-type = ["lib"]

[features]
default = []
buildgen = ["bindgen"]

[dependencies]
cty = "0.2.2"

[build-dependencies]
bindgen = { version = "0.60.1", optional = true }